--- a/views/result.erb
+++ b/views/result.erb
@@ -5,8 +5,8 @@
 
  <% @result.each do |x| %>
     <li><a href= 
-    	<%= '/poster/#{x["imdbID"]}' %> > 
-    	<%= "#{x["Title"]} - #{x["Year"]}" %> </a></li> 
+    	<%= "/poster/#{x["imdbID"]}" %> > 
+    	<%= "#{x["Title"]} - #{x["Year"]}" %> </a></li>
     <% end %>
 
  </ul>
