--- a/views/poster.erb
+++ b/views/poster.erb
@@ -1,9 +1,15 @@
 
-<h1>Movie Poster</h1>
-  
-<h3>  <%= "#{@result["Title"]}" %> </h3>
-
+<h1> <%= "#{@result["Title"]}" %>: Movie Poster</h1>
+ 
 <img src= <%= "#{@result["Poster"]}" %> ></img>
+
+<h3> Plot: <%= "#{@result["Plot"]}" %> </h3>
+<h3> Released: <%= "#{@result["Released"]}" %> </h3>
+<h3> Rated: <%= "#{@result["Rated"]}" %> </h3>
+<h3> Runtime: <%= "#{@result["Runtime"]}" %> </h3>
+<h3> Genre: <%= "#{@result["Genre"]}" %> </h3>
+<h3> Director(s): <%= "#{@result["Director"]}" %> </h3>
+<h3> Actors <%= "#{@result["Actors"]}" %> </h3>
 
 <br />
 
