links to official IMDB page

--- a/views/poster.erb
+++ b/views/poster.erb
@@ -11,6 +11,8 @@
 <h3> Director(s): <%= "#{@result["Director"]}" %> </h3>
 <h3> Actors <%= "#{@result["Actors"]}" %> </h3>
 
+<h4> Want even more info on "#{@result["Title"]}" %>? Check out the official <a href=http://www.imdb.com/title/<%= "#{@result["imdbID"]}" %> >IMDB page here.</a></h4>
+
 <br />
 
 <a href="/">New Search</a></body></html>'
