--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
 		<title>Search Movies</title>
 	</head>
 
@@ -10,7 +11,7 @@
 
 			<%= yield %>
 
-
+		
 	</body>
 
 </html>
