--- a/views/result.erb
+++ b/views/result.erb
@@ -1,12 +1,22 @@
-<h1>Movie Results</h1>
+<div clas="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1>Movie Search Results</h1>
+		</div>
+	<div> <!--end of row-->
 
-<ul>
-  
+	<div class="row">
+		<div class="col-xs-12">
+			<ul>
+		  
+				<% @result.each do |x| %>
+					<li><a href= 
+						<%= "/poster/#{x["imdbID"]}" %> > 
+						<%= "#{x["Title"]} - #{x["Year"]}" %> 
+					</a></li>
+				<% end %>
 
- <% @result.each do |x| %>
-    <li><a href= 
-    	<%= "/poster/#{x["imdbID"]}" %> > 
-    	<%= "#{x["Title"]} - #{x["Year"]}" %> </a></li>
-    <% end %>
-
- </ul>
+		 	</ul>
+		<div>
+	<div> <!--end of row-->
+<div> <!--end of container-->
