--- a/views/index.erb
+++ b/views/index.erb
@@ -5,15 +5,19 @@
 	<!-- method="GET" or "POST" -->
 		<!--Just http verb used on
 		submission of the form -->
-
-
-
-	<h1>Find a Movie!</h1>
-
-	<form accept-charset="UTF-8" action="/result" method="post">
-	   <label for="movie">Search for:</label>
-	   <input id="movie" name="movie" type="text" />
-	   <input name="commit" type="submit" value="Search" /> 
-	</form>
-
-
+</div class="container">
+	<div class="row">
+		<div class="col-xs-12">
+			<h1>Find a Movie!</h1>
+		</div>
+	<div> <!--end of row-->		
+	<div class="row">
+		<div class="col-xs-12">
+			<form accept-charset="UTF-8" action="/result" method="post">
+			   <label for="movie">Search for:</label> 
+			   <input id="movie" name="movie" type="text" /> 
+			   <input name="commit" type="submit" value="Search" /> 
+			</form>
+		<div>
+	<div> <!--end of row-->
+<div> <!--end of container-->
